Updated the about section

--- a/app/views/application/_side_bar.html.erb
+++ b/app/views/application/_side_bar.html.erb
@@ -31,7 +31,7 @@
 <% end %>
 <div class="box">
   <h2 class="title is-4 has-text-base"> About bookclone </h2>
-  <span> 
-  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint, sequi. 
+  <span>
+    This page was build by me <a href="https://www.linkedin.com/in/zakariaeelmejdki/" target='_blank'>Zakariae El Mejdki</a> and My partner <a href="https://www.linkedin.com/in/franco-rosa-79972119b/" target='_blank'>Franco Rosa</a> in order to improve our skills on ewb Frameworks, we tried to clone facebook features in this project.
   </span>
 </div>
