Add starrr pluing to rateapp

--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -4,8 +4,12 @@
   <div class= "column is-full">
     <div class="timeline-container">
       <h1 class="title is-2 has-text-base has-text-centered"> Reviews </h1>
-      <div class='starrr'>
-      La pura
+      <div class="starrr" id="star1">
+        <a href="#" class="fa fa-star-o"></a>
+        <a href="#" class="fa fa-star-o"></a>
+        <a href="#" class="fa fa-star-o"></a>
+        <a href="#" class="fa fa-star-o"></a>
+        <a href="#" class="fa fa-star-o"></a>
       </div>
       <div class="review-container">
         <div class="about-app">
@@ -62,8 +66,7 @@
   </div>
 </div>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"></script>
-<script src="dist/starrr.js"></script>
+<script src="/starrr.js"></script>
 <script>
     $('#star1').starrr({
       change: function(e, value){
