--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -11,7 +11,9 @@
         <div class="about-app">
           <%= image_tag 'app-logo' %>
           <h3 class="subtitle is-6 has-text-grey">bookclone</h3>
-          <h3 class="subtitle is-7 has-text-grey-light">Average rate: </h3>
+          <% unless @reviews.empty? %>
+            <h3 class="subtitle is-7 has-text-grey-light"> Average rate : <%= '%1.1f' % @reviews.average(:rate) %> </h3>
+          <% end %>
         </div>
         <% if user_signed_in? %>
           <div class="review-form">
@@ -19,11 +21,11 @@
               <%= f.text_area :text, label: 'name', placeholder: 'Please tell us about our app, to improve it.', class:"textarea post-area" %>
               <div class="rating-button">
                 <div class="rating">
-                  <input type="radio" name="star" id="star1"><label for="star1"></label>
-                  <input type="radio" name="star" id="star2"><label for="star2"></label>
-                  <input type="radio" name="star" id="star3"><label for="star3"></label>
-                  <input type="radio" name="star" id="star4"><label for="star4"></label>
-                  <input type="radio" name="star" id="star5"><label for="star5"></label>
+                  <input type="radio" name="review[rate]" id="star1" value="5"><label for="star1"></label>
+                  <input type="radio" name="review[rate]" id="star2" value="4"><label for="star2"></label>
+                  <input type="radio" name="review[rate]" id="star3" value="3"><label for="star3"></label>
+                  <input type="radio" name="review[rate]" id="star4" value="2"><label for="star4"></label>
+                  <input type="radio" name="review[rate]" id="star5" value="1"><label for="star5"></label>
                 </div>
                 <%= f.button :submit, 'Submit review' ,class: 'button is-medium btn-base' %>
               </div>
@@ -34,7 +36,7 @@
 
       <div class="posts-container">
         <% @reviews.each do |review| %>
-          <div class="box">
+          <div class="box review-quote">
             <div class="poster-identifier">
               <div class="poster-info">
                 <%= link_to user_path(review.user), class: "has-text-black underline" do %>
@@ -52,6 +54,9 @@
                     <span class="name"><%= review.user.fullname %></span>
                   <% end %>
                   <span class="username">@<%= review.user.username %></span>
+                  <% review.rate.times do %>
+                    <span><i class="fas fa-star has-text-grey-light"></i><span>
+                  <% end %>
                   <span class="date">
                     <%= time_ago_in_words(review.created_at) %>
                   </span>
