--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -3,7 +3,7 @@
   </div>
   <div class= "column is-full">
     <div class="timeline-container">
-      <h1 class="title is-2 has-text-base has-text-centered"> Reviews </h1>
+      <h1 class="title is-2 has-text-base has-text-centered has-text-success"> Reviews </h1>
       
       
       
@@ -27,7 +27,7 @@
                   <input type="radio" name="review[rate]" id="star4" value="2"><label for="star4"></label>
                   <input type="radio" name="review[rate]" id="star5" value="1"><label for="star5"></label>
                 </div>
-                <%= f.button :submit, 'Submit review' ,class: 'button is-medium btn-base' %>
+                <%= f.button :submit, 'Submit review' ,class: 'button is-medium btn-base is-success' %>
               </div>
             <% end %>
           </div>
