--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -1,7 +1,7 @@
 <div class="columns is-centered column-style">
   <div class="column is-one-fifth mt">
   </div>
-  <div class= "column is-full">
+  <div class= "column is-three-fifths">
     <div class="timeline-container">
       <h1 class="title is-2 has-text-base has-text-centered has-text-success"> Reviews </h1>
       
